Lab 02 finish [added]